--- a/product/product.html
+++ b/product/product.html
@@ -33,9 +33,9 @@
 <!-- header -->
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
-    <a href="home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
+    <a href="../home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
-    <form action="search.html" method="get" class="" id="search-bar">
+    <form action="../search.html" method="get" class="" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search"
                    id="search-input">
@@ -49,7 +49,7 @@
         </div>
     </form>
     <!-- authentication links -->
-    <a class="fa-stack fa-3x" id="mail-icon" href="chat.html">
+    <a class="fa-stack fa-3x" id="mail-icon" href="../chat.html">
         <i class="far fa-envelope fa-stack-2x"></i>
         <!-- place numbers of messages here -->
         <strong class="fa-stack-1x calendar-text got-messages mail-icon-number">
@@ -64,11 +64,11 @@
         </a>
         <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown"
              role="menu">
-            <a class="dropdown-item" href="sell_page.html">New Auction</a>
-            <a class="dropdown-item" href="profile/profile_asUser.html">Profile</a>
-            <a class="dropdown-item" href="chat.html" id="messages-dropdown-item">Messages <strong class="got-messages">27</strong>
+            <a class="dropdown-item" href="../sell_page.html">New Auction</a>
+            <a class="dropdown-item" href="../profile/profile_asUser.html">Profile</a>
+            <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages <strong class="got-messages">27</strong>
             </a>
-            <a class="dropdown-item" href="#">Log out</a>
+            <a class="dropdown-item" href="../home/landing_page.html">Log out</a>
         </div>
     </div>
 </nav>
@@ -174,16 +174,20 @@
                                     </div>
                                 </div>
                                 </div>
-                        <button class="btn btn-primary report" type="button" data-toggle="modal"
-                                data-target="#exampleModal">
-                            Report Account
+
+                        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            More Options
                           </button>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" data-toggle="modal"
+                               data-target="#exampleModal">Report Account</a>
+                          </div>
                           <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
                                aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
                                   <div class="modal-content">
                                     <div class="modal-header">
-                                      <h5 class="modal-title" id="exampleModalLabel">Report Seller Name's Account </h5>
+                                      <h5 class="modal-title" id="exampleModalLabel">Report User Name's Account </h5>
                                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                       </button>
@@ -396,7 +400,11 @@
                             <span class="far fa-star" aria-hidden="true"></span>
                         </div>
                         <div class="review-block">Excellent seller, quick shipping A++++++</div>
-                        <a href="#" class="badge badge-light report">Report Abuse</a>
+                        <button class="badge badge-light report" type="button" data-toggle="modal"
+                                data-target="#exampleModal">
+                            Report abuse
+                        </button>
+
                     </div>
                 </div>
             </div>
