--- a/profile/profile_asBanned.html
+++ b/profile/profile_asBanned.html
@@ -47,10 +47,9 @@
     <div class="dropdown" id="authentication">
         <a class="dropdown-toggle nav-link" href="#" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
-            MrBurns001
+            Mr.Trollolol
         </a>
         <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown" role="menu">
-            <a class="dropdown-item" href="../product/product_asSeller.html">New Auction</a>
             <a class="dropdown-item" href="profile_asUser.html">Profile</a>
             <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages      <strong class="got-messages">27</strong>
             </a>
@@ -70,7 +69,7 @@
         </div>
         <div class="col-md-3">
             <div class="row">
-                <h1>Troll</h1>
+                <h1>Mr.Trollolol</h1>
             </div>
             <div class="row">
                 <p class="email">trollingpages@bidbay.com</p>
