--- a/product/product_asAdmin.html
+++ b/product/product_asAdmin.html
@@ -132,7 +132,7 @@
                             More Options
                           </button>
                           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">View account reports</a>
+                            <a class="dropdown-item" href="#">User Reports</a>
                             <a class="dropdown-item" href="#">Ban account</a>
                           </div>
                     </span>
