--- a/home/landing_page_admin.html
+++ b/home/landing_page_admin.html
@@ -61,7 +61,7 @@
             Administrator
         </a>
         <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown" role="menu">
-            <a class="dropdown-item" href="../report.html">View Account Reports</a>
+            <a class="dropdown-item" href="../report.html">User Reports</a>
             <a class="dropdown-item" href="../profile/profile_asUser.html">Profile</a>
             <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages      <strong class="got-messages">27</strong>
             </a>
