--- a/chat.html
+++ b/chat.html
@@ -70,7 +70,7 @@
 
     <!-- header -->
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="mt-4">
             <nav class="navbar navbar-expand-sm navbar-light bg-faded" style="background-color: #18bc9cd1">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
@@ -131,7 +131,7 @@
     </div>
 
     <!-- messages -->
-    <div class="container-fluid">
+    <div class="container">
         <table class="table  table-hover">
             <thead class="thead-inverse " style="color:#18bc9c; background-color:#464242">
                 <tr>
