--- a/product/product.html
+++ b/product/product.html
@@ -73,7 +73,7 @@
     </div>
 </nav>
 
-<div class="container" id="product-section">
+<div class="container mt-4" id="product-section">
     <div class="row">
         <div class="col-md-9">
             <div class="row">
