--- a/report.html
+++ b/report.html
@@ -56,7 +56,7 @@
             </div>  
         </nav>
 
-        <div class="container-fluid">
+        <div class="container">
 
             <h3 class="border-bottom pb-1 mb-4 mt-5"> Account reports </h3>
                    
