--- a/product/product_itemOnWatchList.html
+++ b/product/product_itemOnWatchList.html
@@ -61,7 +61,7 @@
     </div>
 </nav>
 
-<div class="container" id="product-section">
+<div class="container mt-4" id="product-section">
     <div class="row">
         <div class="col-md-9">
             <div class="row">
