--- a/sell_page.html
+++ b/sell_page.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 </nav>
-<div class="container" id="sell-section">
+<div class="container mt-4" id="sell-section">
 
     <h1 class="border-bottom pb-1 mb-4 h2">Create your auction</h1>
 
@@ -87,9 +87,10 @@
         </div>
 
         <div class="form-group row">
-            <label for="category-input" class="col-3 col-form-label">Category</label>
+            <label for="condition-input" class="col-3 col-form-label">Condition</label>
             <div class="col-9">
-                <select multiple class="form-control" id="category-input" required>
+                <select class="form-control" id="condition-input">
+                    <option hidden> -</option>
                     <option>Technology</option>
                     <option>Automobiles</option>
                     <option>Clothes</option>
@@ -204,6 +205,7 @@
                         No returns accepted
                     </label>
                 </div>
+                
                 <div class="form-group col-md-4 collapse" id='accept_hide'>
                     <label for="returnDays">After receiving the item, your buyer should contact you within:</label>
                     <select id="returnDays" class="form-control">
