--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
     <h4 class="border-bottom pb-1 mb-4 mt-5">Contact the Team </h4>
     <div class="container-fluid">
         <div class="row" id="creators">
-            <div class="col-6">
+            <div class="col-6 col-md-3">
                 <p>Afonso Pinto</p>
                 <p>Cristiana Ribeiro</p>
                 <p>Rostyslav Khoptiy</p>
