add edit page as Admin

--- a/product/product.html
+++ b/product/product.html
@@ -170,11 +170,11 @@
                                     </form>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" id="closebtn" class="btn btn-outline-success"
+                                    <button type="button" id="closebtn" class="btn btn-secondary"
                                             data-dismiss="modal">Close
                                     </button>
                                     <button type="button" id="sendbtn"
-                                            class="btn btn-outline-success">Send message
+                                            class="btn btn-primary">Send message
                                     </button>
                                 </div>
                             </div>
