--- a/product/product_asAdmin.html
+++ b/product/product_asAdmin.html
@@ -17,6 +17,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
+    <script src=" https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
 
     <!-- fonts awesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -36,9 +37,10 @@
     <!-- search bar -->
     <form action="../search.html" method="get" class="" id="search-bar">
         <div class="d-flex">
-            <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
+            <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search"
+                   id="search-input">
             <select class="form-control rounded-0 col-2 " id="search-categories">
-                <option selected> All Categories </option>
+                <option selected> All Categories</option>
                 <option>Technology</option>
                 <option>Automobiles</option>
                 <option>Clothes</option>
@@ -55,14 +57,17 @@
         </strong>
     </a>
     <div class="dropdown" id="authentication">
-        <a class="dropdown-toggle nav-link" href="#" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="dropdown-toggle nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+           aria-expanded="false">
             <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
             Administrator
         </a>
-        <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown" role="menu">
-            <a class="dropdown-item" href="../report.html">View Account Reports</a>
+        <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown"
+             role="menu">
+            <a class="dropdown-item" href="../report.html">Reports</a>
             <a class="dropdown-item" href="../profile/profile_asUser.html">Profile</a>
-            <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages      <strong class="got-messages">27</strong>
+            <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages <strong
+                    class="got-messages">27</strong>
             </a>
             <a class="dropdown-item" href="../home/landing_page.html">Log out</a>
         </div>
@@ -117,11 +122,12 @@
             </div><!-- end row-->
         </div>
 
-        <div class="col-md-3">
-            <div class="card" style="width: 20rem;">
+        <div class="col-md-3 ">
+            <div class="card text-align-center mobile-text-center" style="width: 20rem;">
                 <img class="card-img-top img-fluid" src="https://ir.ebaystatic.com/pictures/aw/social/avatar.png"
                      alt="Seller Image">
-                <div class="card-block">
+
+                <div class="card-block mb-3">
                     <h4 class="card-title"><a href="#">Seller Name</a></h4>
                     <span class="sr-only">Four out of Five Stars</span>
                     <span class="fas fa-star" aria-hidden="true"></span>
@@ -162,20 +168,23 @@
                                         </form>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" id="closebtn" class="btn btn-outline-success"
+
+                                        <button type="button" id="closebtn" class="btn btn-secondary"
                                                 data-dismiss="modal">Close</button>
                                         <button type="button" id="sendbtn"
-                                                class="btn btn-outline-success">Send message</button>
+                                                class="btn btn-primary">Send message</button>
+
                                     </div>
                                     </div>
                                 </div>
                                 </div>
-                          <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton"
+                                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             More Options
                           </button>
                           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <a class="dropdown-item" href="../report.html">User reports</a>
-                            <a class="dropdown-item" href="#">Ban account</a>
+                            <a class="dropdown-item" data-toggle="modal" data-target="#banModal">Ban account</a>
                           </div>
                     </span>
                 </div>
@@ -204,8 +213,8 @@
         </ul>
 
         <span>
-        <a href="#" class="badge badge-danger">Cancel Auction</a>
-        <a href="#" class="badge badge-warning">Edit Auction</a>
+        <a href="#" class="badge badge-danger" data-toggle="modal" data-target="#removeModal">Cancel Auction</a>
+        <a href="edit_page_asAdmin.html" class="badge badge-warning">Edit Auction</a>
             </span>
 
     </nav>
@@ -213,55 +222,68 @@
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="details" role="tabpanel" aria-labelledby="details-tab">
             <dl class="row">
-                <dt class="col-sm-3">Current Bid</dt>
-                <dd class="col-sm-9">US $1600.00</dd>
+                <dl class="row">
+                    <dt class="col-sm-2 text-align-center mobile-text-center">Current Bid</dt>
+                    <dd class="col-sm-10">1600.00€</dd>
 
-                <dt class="col-sm-3">Time Left</dt>
-                <dd class="col-sm-9">4d 05h Wednesday, 9:15PM</dd>
 
-                <dt class="col-sm-3">Description</dt>
-                <dd class="col-sm-9">Ultrabook with the powerful Intel i7-7700HQ Quad Core CPU with NVIDIA GTX 1050
-                    Gaming graphics Card.
-                </dd>
+                    <dt class="col-sm-2 text-align-center mobile-text-center">Time Left</dt>
+                    <dd class="col-sm-10">4d 05h Wednesday, 9:15PM</dd>
 
-            </dl>
+                    <dt class="col-sm-2 text-align-center mobile-text-center">Description</dt>
+                    <dd class="col-sm-10">Ultrabook with the powerful Intel i7-7700HQ Quad Core CPU with NVIDIA GTX 1050
+                        Gaming graphics Card.
+                    </dd>
+
+                </dl>
         </div>
         <div class="tab-pane fade" id="shippingAndPayment" role="tabpanel" aria-labelledby="shippingAndPayment-tab">
             <dl class="row">
-                <dt class="col-sm-3">Shipping</dt>
-                <dd class="col-sm-9">FREE Economy International Shipping</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Shipping</dt>
+                <dd class="col-sm-10">FREE Economy International Shipping</dd>
 
-                <dt class="col-sm-3">Item location</dt>
-                <dd class="col-sm-9"> Henan, China</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Item location</dt>
+                <dd class="col-sm-10"> Henan, China</dd>
 
-                <dt class="col-sm-3">Ships to</dt>
-                <dd class="col-sm-9"> Worldwide</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Ships to</dt>
+                <dd class="col-sm-10"> Worldwide</dd>
 
-                <dt class="col-sm-3">Delivery</dt>
-                <dd class="col-sm-9"> Estimated between Fri. Mar. 23 and Tue. May. 15</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Delivery</dt>
+                <dd class="col-sm-10"> Estimated between Fri. Mar. 23 and Tue. May. 15</dd>
 
-                <dt class="col-sm-3">Payments</dt>
-                <dd class="col-sm-9"> Paypal | Visa | Mastercard</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Payments</dt>
+                <dd class="col-sm-10"> Paypal | Visa | Mastercard</dd>
 
-                <dt class="col-sm-3">Returns</dt>
-                <dd class="col-sm-9">30 day returns. Buyer pays for return shipping</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Returns</dt>
+                <dd class="col-sm-10">30 day returns. Buyer pays for return shipping</dd>
             </dl>
         </div>
         <div class="tab-pane fade" id="qa" role="tabpanel" aria-labelledby="qa-tab">
             <dl class="row">
-                <dt class="col-sm-6">Does it come with a fingerprint reader?</dt>
-                <dd class="col-sm-6">Nope :-)</dd>
+                <dt class="col-sm-4 text-align-center mobile-text-center">Does it come with a fingerprint reader?</dt>
+                <dd class="col-sm-8">Nope :-)</dd>
 
-                <dt class="col-sm-6">
+                <dt class="col-sm-4 text-align-center mobile-text-center">
                     Are you able to deliver this with portuguese keyboard layout?
                 </dt>
-                <dd class="col-sm-6">Yes we can delivery with Portuguese keyboard layout.</dd>
+                <dd class="col-sm-8">Yes we can delivery with Portuguese keyboard layout.</dd>
             </dl>
-            <div class="input-group mb-3">
+            <div class="input-group mb-3 col-sm-10">
                 <input type="text" class="form-control" placeholder="Place your question"
                        aria-label="Place your question" aria-describedby="basic-addon2">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button">Ask</button>
+                    <button class="btn btn-outline-secondary" type="button" data-toggle="collapse"
+                            data-target="#collapseAlertAsk">Ask
+                    </button>
+                </div>
+
+            </div>
+            <div class="collapse" id="collapseAlertAsk">
+                <div class="alert alert-success" role="alert">
+                    <strong>Well done!</strong> You successfully submitted a question.
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -269,13 +291,13 @@
         <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
             <div class="review-block">
                 <div class="row">
-                    <div class="col-sm-3">
+                    <div class="col-sm-2 text-align-center mobile-text-center">
                         <img src="https://vignette.wikia.nocookie.net/antagonist/images/8/8b/Mr._Burns.jpg"
                              class="img-review img-fluid">
                         <div class="review-block-name"><a href="../profile/profile.html">MrBurns</a></div>
                         <div class="review-block-date">March 01, 2018</div>
                     </div>
-                    <div class="col-sm-9">
+                    <div class="col-sm-10 ">
                         <div class="review-block-rate">
                             <span class="fas fa-star" aria-hidden="true"></span>
                             <span class="fas fa-star" aria-hidden="true"></span>
@@ -284,8 +306,9 @@
                             <span class="far fa-star" aria-hidden="true"></span>
                         </div>
                         <div class="review-block">Excellent seller, quick shipping A++++++</div>
-                        <a href="#" class="badge badge-danger">Remove Content</a>
-                        <a href="#" class="badge badge-warning">Edit Content</a>
+                        <a href="#" class="badge badge-danger remove" data-toggle="modal" data-target="#removeModal">Remove
+                            Content</a>
+                        <a href="#edit_modal" data-toggle="modal" class="badge badge-warning">Edit Content</a>
 
                     </div>
                 </div>
@@ -294,6 +317,125 @@
 
     </div>
 
+    <div class="modal fade" id="removeModal" tabindex="-1" role="dialog"
+         aria-labelledby="removeModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="removeModalLabel">Remove Content </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <div>
+                                <h5 style="color:brown"> Motive</h5>
+                                <div class="radio">
+                                    <label><input type="radio"
+                                                  name="behaviour"> Abusive behaviour </label>
+                                </div>
+                                <div class="radio">
+                                    <label><input type="radio" name="content">Spam </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="col-form-label">Message:</label>
+                            <textarea class="form-control" id="message-text"></textarea>
+                        </div>
+                        <label for="admin-pass" class="col-form-label">Password:</label>
+                        <input type="password" class="form-control" id="admin-pass">
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary"
+                            data-dismiss="modal">Close
+                    </button>
+                    <button type="button" class="btn btn-danger report">Remove</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="banModal" tabindex="-1" role="dialog"
+         aria-labelledby="banModal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="banModalLabel">Ban Account </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <div>
+                                <h5 style="color:brown"> Motive</h5>
+                                <div class="radio">
+                                    <label><input type="radio"
+                                                  name="behaviour">Abusive behaviour</label>
+                                </div>
+                                <div class="radio">
+                                    <label><input type="radio" name="content">Spam</label>
+                                </div>
+                                <div class="radio">
+                                    <label><input type="radio" name="content">Troll</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="ban_duration" class="col-form-label">Ban Duration:</label>
+                            <span>
+                                <input type="date" class="form-control mb-2" name="duration" id="ban_duration">
+                                </span>
+
+                            <span class="radio">
+                                    <label><input type="radio" name="duration">Permanent</label>
+                            </span>
+
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text_ban" class="col-form-label">Message:</label>
+                            <textarea class="form-control" id="message-text_ban"></textarea>
+                        </div>
+                        <label for="admin-pass_ban" class="col-form-label">Password:</label>
+                        <input type="password" class="form-control" id="admin-pass_ban">
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger report">Ban Account</button>
+                    <button type="button" class="btn btn-secondary"
+                            data-dismiss="modal">Close
+                    </button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="edit_modal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editModalLabel">Edit Content</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <input class="form-control" type="text" value="Excellent seller, quick shipping A++++++">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div><!-- end container -->
 
