--- a/sell_page.html
+++ b/sell_page.html
@@ -87,9 +87,9 @@
         </div>
 
         <div class="form-group row">
-            <label for="condition-input" class="col-3 col-form-label">Condition</label>
+            <label for="category-input" class="col-3 col-form-label">Category</label>
             <div class="col-9">
-                <select class="form-control" id="condition-input">
+                <select class="form-control" id="category-input">
                     <option hidden> -</option>
                     <option>Technology</option>
                     <option>Automobiles</option>
