add edit page as Seller

--- a/product/product_asAdmin.html
+++ b/product/product_asAdmin.html
@@ -222,20 +222,18 @@
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="details" role="tabpanel" aria-labelledby="details-tab">
             <dl class="row">
-                <dl class="row">
-                    <dt class="col-sm-2 text-align-center mobile-text-center">Current Bid</dt>
-                    <dd class="col-sm-10">1600.00€</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Current Bid</dt>
+                <dd class="col-sm-10">1600.00€</dd>
 
+                <dt class="col-sm-2 text-align-center mobile-text-center">Time Left</dt>
+                <dd class="col-sm-10">4d 05h Wednesday, 9:15PM</dd>
 
-                    <dt class="col-sm-2 text-align-center mobile-text-center">Time Left</dt>
-                    <dd class="col-sm-10">4d 05h Wednesday, 9:15PM</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Description</dt>
+                <dd class="col-sm-10">Ultrabook with the powerful Intel i7-7700HQ Quad Core CPU with NVIDIA GTX 1050
+                    Gaming graphics Card.
+                </dd>
 
-                    <dt class="col-sm-2 text-align-center mobile-text-center">Description</dt>
-                    <dd class="col-sm-10">Ultrabook with the powerful Intel i7-7700HQ Quad Core CPU with NVIDIA GTX 1050
-                        Gaming graphics Card.
-                    </dd>
-
-                </dl>
+            </dl>
         </div>
         <div class="tab-pane fade" id="shippingAndPayment" role="tabpanel" aria-labelledby="shippingAndPayment-tab">
             <dl class="row">
@@ -417,7 +415,8 @@
         </div>
     </div>
 
-    <div class="modal fade" id="edit_modal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
+    <div class="modal fade" id="edit_modal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel"
+         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
