--- a/product/product_asSeller.html
+++ b/product/product_asSeller.html
@@ -123,11 +123,11 @@
         </div>
 
         <div class="col-md-3">
-            <div class="card" style="width: 20rem;">
+            <div class="card text-align-center mobile-text-center" style="width: 20rem;">
                 <img class="card-img-top img-fluid" src="https://ir.ebaystatic.com/pictures/aw/social/avatar.png"
                      alt="Seller Image">
-                <div class="card-block">
-                    <h4 class="card-title"><a href="#">Seller Name</a></h4>
+                <div class="card-block mb-3">
+                    <h4 class="card-title"><a href="../profile/profile.html">Seller Name</a></h4>
                     <span class="sr-only">Four out of Five Stars</span>
                     <span class="fas fa-star" aria-hidden="true"></span>
                     <span class="fas fa-star" aria-hidden="true"></span>
@@ -137,8 +137,8 @@
                     <span class="badge badge-success">61</span>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, consequatur
                         cupiditate dicta doloremque eligendi</p>
-                    <a href="../sell_page.html" class="btn btn-primary ">Edit Auction</a>
-                    <a href="#" class="btn btn-danger ">Remove Auction</a>
+                    <a href="edit_page_asSeller.html" class="btn btn-primary ">Edit Auction</a>
+                    <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#removeModal">Remove Auction</a>
                 </div>
             </div>
         </div>
@@ -168,72 +168,81 @@
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="details" role="tabpanel" aria-labelledby="details-tab">
             <dl class="row">
-                <dt class="col-sm-3">Current Bid</dt>
-                <dd class="col-sm-9">US $1600.00</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Current Bid</dt>
+                <dd class="col-sm-10">1600.00€</dd>
 
-                <dt class="col-sm-3">Time Left</dt>
-                <dd class="col-sm-9">4d 05h Wednesday, 9:15PM</dd>
 
-                <dt class="col-sm-3">Description</dt>
-                <dd class="col-sm-9">Ultrabook with the powerful Intel i7-7700HQ Quad Core CPU with NVIDIA GTX 1050
+                <dt class="col-sm-2 text-align-center mobile-text-center">Time Left</dt>
+                <dd class="col-sm-10">4d 05h Wednesday, 9:15PM</dd>
+
+                <dt class="col-sm-2 text-align-center mobile-text-center">Description</dt>
+                <dd class="col-sm-10">Ultrabook with the powerful Intel i7-7700HQ Quad Core CPU with NVIDIA GTX 1050
                     Gaming graphics Card.
                 </dd>
             </dl>
         </div>
         <div class="tab-pane fade" id="shippingAndPayment" role="tabpanel" aria-labelledby="shippingAndPayment-tab">
             <dl class="row">
-                <dt class="col-sm-3">Shipping</dt>
-                <dd class="col-sm-9">FREE Economy International Shipping</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Shipping</dt>
+                <dd class="col-sm-10">FREE Economy International Shipping</dd>
 
-                <dt class="col-sm-3">Item location</dt>
-                <dd class="col-sm-9"> Henan, China</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Item location</dt>
+                <dd class="col-sm-10"> Henan, China</dd>
 
-                <dt class="col-sm-3">Ships to</dt>
-                <dd class="col-sm-9"> Worldwide</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Ships to</dt>
+                <dd class="col-sm-10"> Worldwide</dd>
 
-                <dt class="col-sm-3">Delivery</dt>
-                <dd class="col-sm-9"> Estimated between Fri. Mar. 23 and Tue. May. 15</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Delivery</dt>
+                <dd class="col-sm-10"> Estimated between Fri. Mar. 23 and Tue. May. 15</dd>
 
-                <dt class="col-sm-3">Payments</dt>
-                <dd class="col-sm-9"> Paypal | Visa | Mastercard</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Payments</dt>
+                <dd class="col-sm-10"> Paypal | Visa | Mastercard</dd>
 
-                <dt class="col-sm-3">Returns</dt>
-                <dd class="col-sm-9">30 day returns. Buyer pays for return shipping</dd>
+                <dt class="col-sm-2 text-align-center mobile-text-center">Returns</dt>
+                <dd class="col-sm-10">30 day returns. Buyer pays for return shipping</dd>
             </dl>
         </div>
         <div class="tab-pane fade" id="qa" role="tabpanel" aria-labelledby="qa-tab">
             <dl class="row">
-                <dt class="col-sm-6">Does it come with a fingerprint reader?</dt>
-                <dd class="col-sm-6">Nope :-)</dd>
+                <dt class="col-sm-4 text-align-center mobile-text-center">Does it come with a fingerprint reader?</dt>
+                <dd class="col-sm-8">Nope :-)</dd>
 
-                <dt class="col-sm-6">
+                <dt class="col-sm-4 text-align-center mobile-text-center">
                     Are you able to deliver this with portuguese keyboard layout?
                 </dt>
-                <dd class="col-sm-6">Yes we can delivery with Portuguese keyboard layout.</dd>
-                <dt class="col-sm-6">Does it come with Linux?</dt>
-                <dd class="col-sm-6">
+                <dd class="col-sm-8">Yes we can delivery with Portuguese keyboard layout.</dd>
+                <dt class="col-sm-4 text-align-center mobile-text-center">Does it come with Linux?</dt>
+                <dd class="col-sm-8">
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Place your answer"
                                aria-label="Place your question" aria-describedby="basic-addon2">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button">Answer</button>
+                            <button class="btn btn-outline-secondary" type="button" data-toggle="collapse" data-target="#collapseAlertAnswer">Answer</button>
                         </div>
                     </div>
                 </dd>
-
             </dl>
+            <div class="collapse" id="collapseAlertAnswer">
+                <div class="alert alert-success" role="alert">
+                    <strong>Well done!</strong> You successfully submitted an answer.
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            </div>
 
         </div>
 
         <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
             <div class="review-block">
                 <div class="row">
-                    <div class="col-sm-3">
-                        <img src="https://vignette.wikia.nocookie.net/antagonist/images/8/8b/Mr._Burns.jpg" class="img-review img-fluid">
-                        <div class="review-block-name"><a href="../profile/profile.html">MrBurns</a></div>
+                    <div class="col-sm-2 text-align-center mobile-text-center">
+                        <img src="https://vignette.wikia.nocookie.net/antagonist/images/8/8b/Mr._Burns.jpg"
+                             class="img-review img-fluid">
+                        <div class="review-block-name"><a href="../profile/profile_asUser.html">MrBurns</a></div>
                         <div class="review-block-date">March 01, 2018</div>
                     </div>
-                    <div class="col-sm-9">
+                    <div class="col-sm-10 ">
                         <div class="review-block-rate">
                             <span class="fas fa-star" aria-hidden="true"></span>
                             <span class="fas fa-star" aria-hidden="true"></span>
@@ -242,10 +251,11 @@
                             <span class="far fa-star" aria-hidden="true"></span>
                         </div>
                         <div class="review-block">Excellent seller, quick shipping A++++++</div>
-                        <button class="badge badge-light report" type="button" data-toggle="modal"
-                                data-target="#exampleModal">
+                        <a class="badge badge-light report" type="button" data-toggle="modal"
+                           href="#exampleModal">
                             Report abuse
-                        </button>
+                        </a>
+                    </div>
                         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
                              aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog" role="document">
@@ -296,6 +306,32 @@
         </div>
 
     </div>
+
+<div class="modal fade" id="removeModal" tabindex="-1" role="dialog"
+     aria-labelledby="removeModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="removeModalLabel">Remove Auction </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <label for="admin-pass" class="col-form-label">Password:</label>
+                    <input type="password" class="form-control" id="admin-pass">
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary"
+                        data-dismiss="modal">Close
+                </button>
+                <button type="button" class="btn btn-danger report">Remove</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 </div><!-- end container -->
