--- a/product/edit_page_asSeller.html
+++ b/product/edit_page_asSeller.html
@@ -31,7 +31,7 @@
 </head>
 <body class="website-body">
 <!-- header -->
-<<nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
+<nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
     <a href="../home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
