--- a/profile/adminProfile_asAdmin.html
+++ b/profile/adminProfile_asAdmin.html
@@ -29,32 +29,39 @@
     <!-- search bar -->
     <form action="../search.html" method="get" class="" id="search-bar">
         <div class="d-flex">
-            <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search" id="search-input">
-            <label for="search-categories"></label><select class="form-control rounded-1 col-2 " id="search-categories">
-            <option selected> All Categories </option>
-            <option>Technology</option>
-            <option>Automobiles</option>
-            <option>Clothes</option>
-        </select>
+            <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search"
+                   id="search-input">
+            <select class="form-control rounded-1 col-2 " id="search-categories">
+                <option selected> All Categories</option>
+                <option>Technology</option>
+                <option>Automobiles</option>
+                <option>Clothes</option>
+            </select>
             <button class="btn btn-dark rounded-1 " type="submit"><i class="fas fa-search"></i></button>
         </div>
     </form>
     <!-- authentication links -->
-    <a class="fa-stack fa-3x" id="mail-icon" href="#">
+    <a class="fa-stack fa-3x" id="mail-icon" href="../chat.html">
         <i class="far fa-envelope fa-stack-2x"></i>
-        <strong class="fa-stack-1x calendar-text got-messages mail-icon-number">27</strong>
+        <!-- place numbers of messages here -->
+        <strong class="fa-stack-1x calendar-text got-messages mail-icon-number">
+            27
+        </strong>
     </a>
     <div class="dropdown" id="authentication">
-        <a class="dropdown-toggle nav-link" href="#" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="dropdown-toggle nav-link" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+           aria-expanded="false">
             <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
             Administrator
         </a>
-        <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown" role="menu">
-            <a class="dropdown-item" href="../product/product_asSeller.html">New Auction</a>
-            <a class="dropdown-item" href="profile_asUser.html">Profile</a>
-            <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages      <strong class="got-messages">27</strong>
+        <div class="dropdown-menu dropdown-menu-right" id="header-dropdown" aria-labelledby="authenticated-dropdown"
+             role="menu">
+            <a class="dropdown-item" href="../sell_page.html">New Auction</a>
+            <a class="dropdown-item" href="../profile/profile_asUser.html">Profile</a>
+            <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages <strong
+                    class="got-messages">27</strong>
             </a>
-            <a class="dropdown-item" href="#">Log out</a>
+            <a class="dropdown-item" href="../home/landing_page.html">Log out</a>
         </div>
     </div>
 </nav>
@@ -87,112 +94,15 @@
                 <span class="far fa-star" aria-hidden="true"></span>
                 <span class="badge badge-success">45</span>
             </div>
-            <div class="row">
-                <a href="#" class="btn btn-danger ">Vote to demote Admin</a>
+            <div class="row" id="voteDemote">
+                <a href="#" class="btn btn-danger " data-toggle="collapse" data-target=".collapseAlert">Vote to demote Admin</a>
             </div>
-        </div>
-
-        <!-- Nav tabs -->
-        <ul class="nav nav-tabs">
-            <li class="active">
-                <a class="nav-link active" id="feedback-tab" data-toggle="tab" href="#feedback" role="tab" aria-controls="feedback" aria-selected="true">Feedback</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" id="itemsForSale-tab" data-toggle="tab" href="#itemsForSale" role="tab" aria-controls="itemsForSale" aria-selected="true">Items for Sale</a>
-            </li>
-        </ul>
-        <!-- Tab panes -->
-        <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="feedback" role="tabpanel" aria-labelledby="feedback-tab">
-                <div class="review-block">
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <img src="https://vignette.wikia.nocookie.net/antagonist/images/8/8b/Mr._Burns.jpg" class="img-review img-fluid">
-                            <div class="review-block-name"><a>Mr Burns</a></div>
-                            <div class="review-block-date">March 01, 2018</div>
-                        </div>
-                        <div class="col-sm-9">
-                            <div class="review-block-rate">
-                                <span class="fas fa-star" aria-hidden="true"></span>
-                                <span class="fas fa-star" aria-hidden="true"></span>
-                                <span class="fas fa-star" aria-hidden="true"></span>
-                                <span class="fas fa-star" aria-hidden="true"></span>
-                                <span class="far fa-star" aria-hidden="true"></span>
-                            </div>
-                            <div class="review-block">I would give 5/5 if it was free</div>
-                            <a href="#" class="badge badge-light">Report Abuse</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="review-block">
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <img src="http://interactive.nydailynews.com/2016/05/simpsons-quiz/img/simp1.jpg" class="img-review img-fluid">
-                            <div class="review-block-name"><a>Homer Simpson</a></div>
-                            <div class="review-block-date">March 02, 2018</div>
-                        </div>
-                        <div class="col-sm-9">
-                            <div class="review-block-rate">
-                                <span class="fas fa-star" aria-hidden="true"></span>
-                                <span class="fas fa-star" aria-hidden="true"></span>
-                                <span class="far fa-star" aria-hidden="true"></span>
-                                <span class="far fa-star" aria-hidden="true"></span>
-                                <span class="far fa-star" aria-hidden="true"></span>
-                            </div>
-                            <div class="review-block">Meh</div>
-                            <a href="#" class="badge badge-light">Report Abuse</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="tab-pane fade" id="itemsForSale" role="tabpanel" aria-labelledby="itemsForSale-tab">
-                <div class="container-fluid">
-                    <div class="col-md-12">
-                        <ul>
-                            <li>
-                                <div class="row">
-                                    <div>
-                                        <img src="https://http2.mlstatic.com/quadro-pug-pop-art-cachorro-pet-rrs2-decoracao-sala-paspatur-D_NQ_NP_761901-MLB20437861082_102015-F.jpg" alt="result 1" width="250" height="150">
-                                    </div>
-                                    <div class="col align-self-center">
-                                        <h4>
-                                            <a href="#">Dog Painting</a>
-                                        </h4>
-                                        <div class="row padding-product-info">
-                                            <div class="w-100"></div>
-                                            <div class="col">
-                                                <p>Accessories</p>
-                                            </div>
-                                            <div class="col">
-                                                <p>Time Left:</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="row">
-                                    <div>
-                                        <img src="https://rukminim1.flixcart.com/image/832/832/book/1/5/9/a-game-of-thrones-the-story-continues-the-complete-box-set-of-7-books-original-imadfgzztg4ahyhk.jpeg?q=70" alt="result 1" width="250" height="150">
-                                    </div>
-                                    <div class="col align-self-center">
-                                        <h4>
-                                            <a href="#">Game of Thrones Books Colection</a>
-                                        </h4>
-                                        <div class="row padding-product-info">
-                                            <div class="w-100"></div>
-                                            <div class="col">
-                                                <p>Books</p>
-                                            </div>
-                                            <div class="col">
-                                                <p>Time Left:</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+            <div class="collapse collapseAlert">
+                <div class="alert alert-success" role="alert">
+                    <strong>Done!</strong> You voted to demote this Admin
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
             </div>
         </div>
