--- a/profile/edit_profile.html
+++ b/profile/edit_profile.html
@@ -39,7 +39,7 @@
         <div class="d-flex">
             <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search"
                    id="search-input">
-            <select class="form-control rounded-1 col-2 " id="search-categories">
+            <label for="search-categories"></label><select class="form-control rounded-1 col-2 " id="search-categories">
                 <option selected> All Categories</option>
                 <option>Technology</option>
                 <option>Automobiles</option>
@@ -102,7 +102,7 @@
         <div class="form-group row">
             <label for="email-input" class="col-3 col-form-label">Address</label>
             <div class="col-9">
-                <input class="form-control" type="text" value="Springfield, Mont Street, nº 12" id="address-input" required>
+                <label for="address-input"></label><input class="form-control" type="text" value="Springfield, Mont Street, nº 12" id="address-input" required>
             </div>
         </div>
 
