--- a/profile/bannedProfile_asVisitor.html
+++ b/profile/bannedProfile_asVisitor.html
@@ -31,7 +31,7 @@
         <div class="d-flex">
             <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search"
                    id="search-input">
-            <select class="form-control rounded-1 col-2 " id="search-categories">
+            <label for="search-categories"></label><select class="form-control rounded-1 col-2 " id="search-categories">
                 <option selected> All Categories</option>
                 <option>Technology</option>
                 <option>Automobiles</option>
