--- a/profile/profile_asUser.html
+++ b/profile/profile_asUser.html
@@ -31,7 +31,7 @@
         <div class="d-flex">
             <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search"
                    id="search-input">
-            <select class="form-control rounded-1 col-2 " id="search-categories">
+            <label for="search-categories"></label><select class="form-control rounded-1 col-2 " id="search-categories">
                 <option selected> All Categories</option>
                 <option>Technology</option>
                 <option>Automobiles</option>
@@ -485,7 +485,7 @@
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label class="form-control-label">Feedback:</label>
-                                                                    <textarea class="form-control" id="appeal-text"></textarea>
+                                                                    <label for="appeal-text"></label><textarea class="form-control" id="appeal-text"></textarea>
                                                                 </div>
                                                             </form>
                                                         </div>
@@ -532,11 +532,15 @@
                                                                         </div>
                                                                     </div>
                                                                     <label for="recipient-name" class="col-form-label">Other:</label>
-                                                                    <input type="text" class="form-control">
+                                                                    <label>
+                                                                        <input type="text" class="form-control">
+                                                                    </label>
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="message-text" class="col-form-label">Message:</label>
-                                                                    <textarea class="form-control"></textarea>
+                                                                    <label>
+                                                                        <textarea class="form-control"></textarea>
+                                                                    </label>
                                                                 </div>
                                                             </form>
                                                         </div>
