--- a/home/landing_page.html
+++ b/home/landing_page.html
@@ -118,7 +118,7 @@
         <h3 class="border-bottom mb-3">Most Recent Auctions: </h3>
         <div class="card-columns">
             <!-- reference to auction here -->
-            <div class="card mb-3 mt-2 border-info">
+            <div class="card border-info">
                 <a href="../product/product.html">
                     <!-- place auction data here -->
                     <!-- images can be any size -->
@@ -134,7 +134,7 @@
                     </div>
                 </a>
             </div>
-            <div class="card mb-3 mt-2 border-info">
+            <div class="card border-info">
                 <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                     <div class="card-body">
@@ -147,7 +147,7 @@
                     </div>
                 </a>
             </div>
-            <div class="card mb-3 mt-2 border-info">
+            <div class="card border-info">
                 <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                     <div class="card-body">
@@ -160,7 +160,7 @@
                     </div>
                 </a>
             </div>
-            <div class="card mb-3 mt-2 border-info">
+            <div class="card border-info">
                 <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                     <div class="card-body">
@@ -173,7 +173,7 @@
                     </div>
                 </a>
             </div>
-            <div class="card mb-3 mt-2 border-info">
+            <div class="card border-info">
                 <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                     <div class="card-body">
@@ -186,7 +186,7 @@
                     </div>
                 </a>
             </div>
-            <div class="card mb-3 mt-2 border-info">
+            <div class="card border-info">
                 <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                     <div class="card-body">
@@ -208,7 +208,7 @@
         <h3 class="border-bottom mb-3">Ending Soon: </h3>
         <div class="card-columns">
             <!-- reference to auction here -->
-            <div class="card mb-3 mt-2 border-info">
+            <div class="card border-info">
                 <a href="../product/product.html">
                     <!-- place auction data here -->
                     <!-- images can be any size -->
@@ -223,7 +223,7 @@
                     </div>
                 </a>
             </div>
-            <div class="card mb-3 mt-2 border-info">
+            <div class="card border-info">
                 <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                     <div class="card-body">
@@ -236,7 +236,7 @@
                     </div>
                 </a>
             </div>
-            <div class="card mb-3 mt-2 border-info">
+            <div class="card border-info">
                 <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                     <div class="card-body">
@@ -249,7 +249,7 @@
                     </div>
                 </a>
             </div>
-            <div class="card mb-3 mt-2 border-info">
+            <div class="card border-info">
                 <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                     <div class="card-body">
@@ -262,7 +262,7 @@
                     </div>
                 </a>
             </div>
-            <div class="card mb-3 mt-2 border-info">
+            <div class="card border-info">
                 <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                     <div class="card-body">
@@ -275,7 +275,7 @@
                     </div>
                 </a>
             </div>
-            <div class="card mb-3 mt-2 border-info">
+            <div class="card border-info">
                 <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                     <div class="card-body">
