--- a/profile/edit_profile.html
+++ b/profile/edit_profile.html
@@ -79,14 +79,21 @@
     <form>
 
         <div class="form-group row">
-            <label for="name-input" class="col-3 col-form-label">Name</label>
+            <label for="name-input" class="col-3 col-form-label">First</label>
             <div class="col-9">
                 <input class="form-control" type="text" value="Mr. Burns" id="name-input" required>
             </div>
         </div>
 
         <div class="form-group row">
-            <label for="username-input" class="col-3 col-form-label">Name</label>
+            <label for="lastname-input" class="col-3 col-form-label">Last Name</label>
+            <div class="col-9">
+                <input class="form-control" type="text" value="Mr. Burns" id="lastname-input" required>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label for="username-input" class="col-3 col-form-label">Username</label>
             <div class="col-9">
                 <input class="form-control" type="text" value="MrBurns001" id="username-input" required>
             </div>
@@ -100,9 +107,23 @@
         </div>
 
         <div class="form-group row">
+            <label for="city-input" class="col-3 col-form-label">City</label>
+            <div class="col-9">
+                <input class="form-control" type="text" value="New York" id="city-input" required>
+            </div>
+        </div>
+
+        <div class="form-group row">
             <label for="email-input" class="col-3 col-form-label">Address</label>
             <div class="col-9">
-                <label for="address-input"></label><input class="form-control" type="text" value="Springfield, Mont Street, nº 12" id="address-input" required>
+                <input class="form-control" type="text" value="Springfield, Mont Street, nº 12" id="address-input" required>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label for="zipcode-input" class="col-3 col-form-label">Zip-code</label>
+            <div class="col-9">
+                <input class="form-control" type="text" value="1234-321" id="zipcode-input" required>
             </div>
         </div>
 
